2007-06-06  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/scale-funcs.c (scale_region): always use
	scale_region_lanczos() for LANCZOS interpolation. Fixes bug #443640.

2007-06-06  Sven Neumann  <sven@gimp.org>

	* app/core/gimpprojection.c (gimp_projection_estimate_memsize):
	the projection is 2 bytes per pixel for grayscale images.

2007-06-06  Sven Neumann  <sven@gimp.org>

	* app/core/gimpprojection.[ch]: added function that estimates the
	memory requirements for an image projection.

	* app/core/gimptemplate.c (gimp_template_notify): use it.

2007-06-06  Sven Neumann  <sven@gimp.org>

	* docs/papers: removed this directory and its contents. The papers
	we used to keep here are only of historical value.

2007-06-06  Michael Natterer  <mitch@gimp.org>

	* libgimpthumb/Makefile.am
	* libgimpthumb/gimp-thumbnail-list.c: added my small thumbnail
	lister before it bit-rots. It prints the filenames of thumbnails
	which match certain criteria. Use the output for further
	processing (e.g. deleting). Doesn't technically belong here but
	can't be added to tools/ because it depends on libgimpthumb.

2007-06-06  Sven Neumann  <sven@gimp.org>

	* papers/script-fu/script-fu.tex: reverted the change here. This
	document only has historical value and must not be changed.

2007-06-06  Mukund Sivaraman  <muks@mukund.org>

	Changed "The GIMP" to "GIMP" everywhere, where it's used as a name.

2007-06-05  Michael Natterer  <mitch@gimp.org>

	* plug-ins/helpbrowser/dialog.c (browser_dialog_goto_index): don't
	expand the row we are going to, only its parent node.

2007-06-05  Simon Budig  <simon@gimp.org>

	* plug-ins/common/tiff-load.c
	* plug-ins/common/tiff-save.c: Implement the proposed scheme for
	storing international path names in TIFF files.

2007-06-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/helpbrowser/dialog.c
	* plug-ins/imagemap/imap_browse.c
	* plug-ins/imagemap/imap_preview.c
	* plug-ins/imagemap/imap_selection.c: added const qualifiers.
